[package]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/ghac"
repository = "https://github.com/Xuanwo/ghac"
edition = "2021"
license = "Apache-2.0"
name = "ghac"
version = "0.1.0"

[workspace]
members = [
    ".",
    "proto-build",
]

[dependencies]
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = ["codegen","prost", "channel"] }
