[package]
name = "ghac-proto-build"
version = "0.0.0"
publish = false

authors = ["Xuanwo <github@xuanwo.io>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/ghac"
repository = "https://github.com/Xuanwo/ghac"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tonic-build = { version = "0.12", features = ["cleanup-markdown"] }