[package]
name = "ghac-proto-build"
version = "0.0.0"
publish = false

categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/ghac"
repository = "https://github.com/Xuanwo/ghac"
edition = "2021"
license = "Apache-2.0"

[dependencies]
prost-build = "0.13"